--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,13 @@
-<<<<<<< HEAD
 #canvas {
     border: 1px solid blue;
-=======
-#canvas {
-    border: 1px solid blue;
->>>>>>> f3c442fa30efa48e6ad5b4bf29b4bde02ef7219e
+}
+
+#game-intro {
+    display: flex;
+
+}
+
+#game-board {
+    display: flex;
+    flex-direction: row;
 }
